SERVER-36841 Fix race between TTL thread and shutdown